<resources>
    <string name="app_name">Schedule</string>
    <string name="week_days">Week days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_time">Enter time</string>
    <string name="all_days">All days</string>
    <string name="add_lesson">Add lesson</string>
    <string name="lesson">Lesson</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title_activity_all_days">AllDaysActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open_menu">Menu</string>
    <string name="saved">Saved</string>
    <string name="back">Back</string>
    <string name="error" translatable="false">ERROR</string>
    <string name="edit">Edit</string>
    <string name="not_added_yet">Not Added Yet</string>
</resources>